<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_margin="30dp"

        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:baselineAlignBottom="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/brush"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/lvl1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/level1"
                android:textSize="20sp"/>


            <Button
                android:id="@+id/lvl2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/level2"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/lvl3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/level3"
                android:textSize="25sp"/>


        </LinearLayout>


        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/lvl4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/level4"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/lvl5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/level5"
                android:textSize="25sp"/>


            <Button
                android:id="@+id/lvl6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/level6"
                android:textSize="25sp"/>


        </LinearLayout>



        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/lvl7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/level7"
                android:textSize="25sp" />

            <Button
                android:id="@+id/lvl8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/level8"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/lvl9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/level9"
                android:textSize="25sp" />


        </LinearLayout>


        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/lvl10"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/level10"
                android:textSize="25sp" />

            <Button
                android:id="@+id/lvl11"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/level11"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/lvl12"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/level12"
                android:textSize="25sp"/>


        </LinearLayout>



        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/lvl13"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/level13"
                android:textSize="25sp" />

            <Button
                android:id="@+id/lvl14"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/level14"
                android:textSize="25sp" />

            <Button
                android:id="@+id/lvl15"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/level15"
                android:textSize="25sp" />

        </LinearLayout>





    </LinearLayout>






</RelativeLayout>