<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:contentPadding="10dp"
    android:backgroundTint="@color/yellow"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_question_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/que1p1"
                android:textSize="26sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">

                <RadioButton
                    android:id="@+id/radioBtn1"
                    android:checked="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans1q1p1"/>

                <RadioButton
                    android:id="@+id/radioBtn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans2q1p1"/>

                <RadioButton
                    android:id="@+id/radioBtn3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans3q1p1"/>


                <RadioButton
                    android:id="@+id/radioBtn4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans1q1p1"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_alignBottom="@+id/layout1"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_gravity="center_horizontal"
                android:id="@+id/add_button"
                android:layout_marginTop="20dp"
                android:text="@string/button_dialog"
                android:textSize="16dp"
                android:backgroundTint="@color/purple_500"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </LinearLayout>

    </RelativeLayout>







</androidx.cardview.widget.CardView>